<resources>
    <string name="app_name">DataSharedPlatform</string>
    <string name="register_name">注册</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_name">登录</string>
    <string name="register_right">注册即表示同意《隐私权说明》</string>
    <string name="default_info">这家伙很懒，什么都没有写</string>
    <string name="default_name">默认名字</string>
    <string name="default_img"></string>
    <string name="finish">完成</string>
    <string name="logout">退出登录</string>
    <string name="comment_something">评论一下</string>
</resources>
