<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_name"
        android:textColor="#000"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="@id/left_line"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:hint="@string/login_email_hint"
        android:textSize="16dp"
        app:layout_constraintLeft_toRightOf="@+id/img1"
        app:layout_constraintRight_toRightOf="@id/right_line"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/right_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/left_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lock_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="@id/left_line"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textSize="16dp"
        app:layout_constraintLeft_toRightOf="@+id/img1"
        app:layout_constraintRight_toRightOf="@id/right_line"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:background="@drawable/selector_lar_button"
        android:text="@string/login_name"
        android:textColor="#fff"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/left_line"
        app:layout_constraintRight_toRightOf="@id/right_line"
        app:layout_constraintTop_toBottomOf="@id/password" />
</android.support.constraint.ConstraintLayout>